--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body {
   
   
   textarea {
-    /*background: transparent;
-*/
+  
     background: lightgray;
     border: none;
     resize: none;
@@ -71,13 +70,8 @@ body {
     border-bottom-right-radius: 15px;
     background-color: #06aed5;
     color: white;
-    padding:25px 40px;
+    padding:0 40px;
 
-    /*padding: 25px 35px;
-        padding: 20px;
-
-    display: inline-block;
-    */
   }
   
   .saveBtn i:hover {
@@ -91,4 +85,14 @@ body {
     border-color: black;
     border-width: 100%;
     height:150px;
+  }
+  .red{
+    background-color: red;
+
+  }
+  .green{
+    background-color: lightgreen;
+  }
+  .grey{
+    background-color: grey;
   }
