Finished code with clean CSS

--- a/style.css
+++ b/style.css
@@ -94,5 +94,5 @@ body {
     background-color: lightgreen;
   }
   .grey{
-    background-color: lightyellow;
+    background-color: lightgray;
   }
